[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TreeHole"
version = "1.1.1"
authors = [{ name = "TeddyHuang-00", email = "huang_nan_2019@pku.edu.cn" }]
description = "A Python interface to PKU Hole!"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["requests", "aiohttp", "aiofiles"]
keywords = ["pku", "hole", "treehole", "aiohttp", "requests"]

[project.urls]
"Homepage" = "https://github.com/TeddyHuang-00/pyTreeHole"
"Bug Tracker" = "https://github.com/TeddyHuang-00/pyTreeHole/issues"
"Documentation" = "https://teddyhuang-00.github.io/pyTreeHole/"
"Changelog" = "https://github.com/TeddyHuang-00/pyTreeHole/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
  "setuptools",
  "rich",
  "pytest",
  "pytest-asyncio",
  "pytest-json-report",
  "vermin",
]
